# data_ingestor

./: Cargo.toml  deploy.sh
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
src/buffer/: mod.rs
src/connectors/: mod.rs
src/connectors/kraken/: book.rs  mod.rs  orders.rs  ticker.rs
src/db/: buffer.rs
src/models/: mod.rs
src/network/: kraken.rs  kraken_orders.rs  kraken_ticker.rs  mod.rs
src/parser/: mod.rs  trade.rs
