[package]
name = "data_ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
dotenvy = "0.15"
reqwest = { version = "0.13.2", features = ["json"] }
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
anyhow = "1"
serde_urlencoded = "0.7"
bincode = "1.3"
